--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.0",
     "react-horizontal-scrolling-menu": "^2.5.2",
     "react-scripts": "4.0.3",
+    "screenfull": "^6.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
