--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling-menu": "^2.5.2",
+    "react-icons": "^4.3.1",
+    "react-router": "^5.0.2",
+    "react-router-dom": "^5.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
