--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-full-screen": "^1.1.0",
     "react-horizontal-scrolling-menu": "^2.5.2",
     "react-icons": "^4.3.1",
+    "react-iframe": "^1.8.0",
     "react-router": "^5.0.2",
     "react-router-dom": "^5.0.2",
     "react-scripts": "4.0.3",
