--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "boxicons": "^2.0.9",
     "rc-slider": "^9.7.4",
@@ -21,9 +22,12 @@
     "react-horizontal-scrolling-menu": "^2.5.2",
     "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
+    "react-redux": "^7.2.6",
     "react-router": "^5.0.2",
     "react-router-dom": "^5.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "screenfull": "^6.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
