--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
     "react-loader-spinner": "^4.0.0",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router": "^5.0.2",
     "react-router-dom": "^5.0.2",
